--- a/Rad/Rad.Windows/AboutPage.xaml
+++ b/Rad/Rad.Windows/AboutPage.xaml
@@ -21,12 +21,12 @@
             <!-- Section 1 header -->
 
             <!-- Section 1 body -->
-            <RichTextBlock x:Name="AboutPageTextBlock" Style="{StaticResource BaseRichTextBlockStyle}" Margin="0,0,0,25" TextWrapping="Wrap">
+            <RichTextBlock x:Name="AboutPageTextBlock" Style="{StaticResource BaseRichTextBlockStyle}" Margin="0,0,0,25" TextWrapping="Wrap" >
                 <Paragraph>
-                    <Run Text="The Satellite Imagery app provides a quick source of advanced weather information for mobile users on the go."/>
+                    <Run Text="The Radar Imagery app provides a quick source of advanced weather information for mobile users on the go."/>
                     <LineBreak/>
                     <LineBreak/>
-                    <Run Text="All data are from the National Oceanic and Atmospheric Administration (NOAA). The app makes no attempt to ensure the quality and accuracy of the data."/>
+                    <Run Text="All data are from Environment Canada (EC). The app makes no attempt to ensure the quality and accuracy of the data."/>
                     <LineBreak/>
                     <LineBreak/>
                     <Run Text="The internet connection of the phone is used to access data. No information about the user or the phone is collected, stored, or shared."/>
