--- a/Rad/Rad.Windows/OptionsPage.xaml
+++ b/Rad/Rad.Windows/OptionsPage.xaml
@@ -21,32 +21,17 @@
             <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Station" />
             <!-- Section 1 body -->
             <ComboBox x:Name="StationComboBox" Margin="0,17,0,0" Padding="10,0,27,0" Width="auto" SelectionChanged="StationComboBox_SelectionChanged" SelectedIndex="0">
-                <x:String>Billings</x:String>
-                <x:String>Boise</x:String>
-                <x:String>Elko</x:String>
-                <x:String>Eureka</x:String>
-                <x:String>Flagstaff</x:String>
-                <x:String>Glasgow</x:String>
-                <x:String>Great Falls</x:String>
-                <x:String>Hanford/San Joaquin Valley</x:String>
-                <x:String>Las Vegas</x:String>
-                <x:String>Los Angeles/Oxnard</x:String>
-                <x:String>Medford</x:String>
-                <x:String>Missoula</x:String>
-                <x:String>Pendleton</x:String>
-                <x:String>Phoenix</x:String>
-                <x:String>Pocatello</x:String>
-                <x:String>Portland</x:String>
-                <x:String>Prince George</x:String>
-                <x:String>Reno</x:String>
-                <x:String>Sacramento</x:String>
-                <x:String>Salt Lake City</x:String>
-                <x:String>San Diego</x:String>
-                <x:String>San Francisco Bay/Monterey</x:String>
-                <x:String>Seattle</x:String>
-                <x:String>Spokane</x:String>
-                <x:String>Tucson</x:String>
-                <x:String>Vancouver</x:String>
+                <x:String>Alberta</x:String>
+                <x:String>British Columbia</x:String>
+                <x:String>Manitoba</x:String>
+                <x:String>New Brunswick</x:String>
+                <x:String>Newfoundland &amp; Labrador</x:String>
+                <x:String>Ontario</x:String>
+                <x:String>Quebec</x:String>
+                <x:String>Saskatchewan</x:String>
+            </ComboBox>
+            <ComboBox Margin="0,17,0,0" Padding="10,0,27,0" Width="auto">
+                
             </ComboBox>
         </StackPanel>
 
@@ -60,8 +45,8 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <RadioButton x:Name="DurationRadioButton1" Grid.Column="0" Content="3 hr" IsChecked="True" GroupName="DurationBoxes"/>
-                <RadioButton x:Name="DurationRadioButton2" Grid.Column="1" Content="6 hr" GroupName="DurationBoxes"/>
+                <RadioButton x:Name="DurationRadioButton1" Grid.Column="0" Content="1 hr" IsChecked="True" GroupName="DurationBoxes"/>
+                <RadioButton x:Name="DurationRadioButton2" Grid.Column="1" Content="3 hr" GroupName="DurationBoxes"/>
             </Grid>
         </StackPanel>
 
