--- a/Rad/Rad.Windows/OptionsPage.xaml
+++ b/Rad/Rad.Windows/OptionsPage.xaml
@@ -1,4 +1,4 @@
-﻿<SettingsFlyout
+﻿<SettingsFlyout x:Name="OptionsPage1"
     x:Class="Rad.OptionsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     IconSource="Assets/SmallLogo.png"
     Title="Options"
-    d:DesignWidth="346" Unloaded="OptionsPage_Unloaded" Loaded="OnLoaded">
+    d:DesignWidth="346" Unloaded="OptionsPage_Unloaded" Loaded="OptionsPage_Loaded">
 
     <!-- This StackPanel acts as a root panel for vertical layout of the content sections -->
     <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Width="265" >
@@ -20,7 +20,7 @@
             <!-- Section 1 header -->
             <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Station" />
             <!-- Section 1 body -->
-            <ComboBox x:Name="StationComboBox" Margin="0,17,0,0" Padding="10,0,27,0" Width="auto" SelectionChanged="StationComboBox_SelectionChanged" SelectedIndex="0">
+            <ComboBox x:Name="ProvinceComboBox" Margin="0,17,0,0" Padding="10,0,27,0" Width="auto" SelectionChanged="ProvinceComboBox_SelectionChanged" SelectedIndex="0">
                 <x:String>Alberta</x:String>
                 <x:String>British Columbia</x:String>
                 <x:String>Manitoba</x:String>
@@ -30,8 +30,7 @@
                 <x:String>Quebec</x:String>
                 <x:String>Saskatchewan</x:String>
             </ComboBox>
-            <ComboBox Margin="0,17,0,0" Padding="10,0,27,0" Width="auto">
-            </ComboBox>
+            <ComboBox x:Name="StationComboBox" Margin="0,17,0,0" Padding="10,0,27,0" Width="auto"/>
         </StackPanel>
 
         <!-- Define more Content Sections below as necessary -->
