--- a/Rad/Rad.WindowsPhone/OptionsPage.xaml
+++ b/Rad/Rad.WindowsPhone/OptionsPage.xaml
@@ -28,7 +28,7 @@
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
-        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Hidden" Padding="0,0,0,0" Margin="0,63,0,66" Grid.RowSpan="2">
+        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Hidden" Padding="0,0,0,0" Margin="0,0,0,0" Grid.Row="1">
             <StackPanel Grid.Row="1" Margin="19,9.5,19,0">
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Station" />
