--- a/Rad/Rad.Shared/OverlaidImages.xaml
+++ b/Rad/Rad.Shared/OverlaidImages.xaml
@@ -8,14 +8,11 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
-    <ScrollViewer Grid.Column="0" x:Name="ImgScrollViewer" ZoomMode="Enabled" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" MinZoomFactor="1" MaxZoomFactor="3" Margin="0,0,0,0" ViewChanging="Scrollview_changing">
-        <StackPanel x:Name="test">
+        <StackPanel>
             <Image x:Name="BaseImage" HorizontalAlignment="Left" Height="468" Margin="0,0,0,0" VerticalAlignment="Top"/>
-            <Image x:Name="CityOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="1" Visibility="Collapsed"/>
-            <Image x:Name="TownsOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="2" Visibility="Collapsed"/>
-            <Image x:Name="RoadsOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="3" Visibility="Collapsed"/>
-            <Image x:Name="RoadNoOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="4" Visibility="Collapsed"/>
-        </StackPanel>
-    </ScrollViewer>
+            <Image x:Name="CityOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="4" Visibility="Collapsed"/>
+            <Image x:Name="TownsOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="3" Visibility="Collapsed"/>
+            <Image x:Name="RoadsOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="1" Visibility="Collapsed"/>
+            <Image x:Name="RoadNoOverlay" HorizontalAlignment="Left" Height="468" Margin="0,-468,0,0" VerticalAlignment="Top" Canvas.ZIndex="2" Visibility="Collapsed"/>
+       </StackPanel>
 </UserControl>
