--- a/Rad/Rad.Windows/MainPage.xaml
+++ b/Rad/Rad.Windows/MainPage.xaml
@@ -35,7 +35,7 @@
         </Grid.RowDefinitions>
 
         <!-- Back button and page title -->
-        <Grid>
+        <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="*"/>
@@ -43,36 +43,38 @@
             <TextBlock x:Name="pageTitle" Text="{StaticResource AppName}" Style="{StaticResource HeaderTextBlockStyle}" Grid.Column="1" IsHitTestVisible="false" TextWrapping="NoWrap" VerticalAlignment="Bottom" Margin="0,0,30,40"/>
         </Grid>
         <!-- Station name -->
-        <StackPanel Grid.Row="1" Margin="120,0,0,0">
-            <TextBlock x:Name="StationBox" FontSize="30" Margin="0,0,30,0"/>
-        </StackPanel>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock x:Name="StationBox" Grid.Column="1" FontSize="30" Margin="0,0,30,0"/>
+        </Grid>
         <!-- Loop controls and image # -->
-        <StackPanel Grid.Row="2" Height="auto">
-            <Grid Height="70" Margin="92,0,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="75" />
-                    <ColumnDefinition Width="75" />
-                    <ColumnDefinition Width="75" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <AppBarButton Grid.Column="0" Icon="Previous" x:Name="PrevButton" Tapped="PrevButton_Click" IsEnabled="False"/>
-                <AppBarButton Grid.Column="1" Icon="Pause" x:Name="PlayPauseButton" Tapped="PlayPauseButton_Click"/>
-                <AppBarButton Grid.Column="2" Icon="Next" x:Name="NextButton" Tapped="NextButton_Click" IsEnabled="False" Grid.ColumnSpan="2" Margin="2,-4,0,0"/>
-                <TextBlock Grid.Column="3" x:Name="StatusBox" Margin="40,18,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="14"/>
-                <ProgressBar Grid.Column="3" x:Name="FileDownloadProgBar" HorizontalAlignment="Left" Height="4" Width="200" Margin="40,40,0,0" VerticalAlignment="Top" Visibility="Collapsed"/>
-            </Grid>
-        </StackPanel>
+        <Grid Grid.Row="2" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="75" />
+                <ColumnDefinition Width="75" />
+                <ColumnDefinition Width="75" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <AppBarButton Grid.Column="1" Icon="Previous" x:Name="PrevButton" Tapped="PrevButton_Click" IsEnabled="False"/>
+            <AppBarButton Grid.Column="2" Icon="Pause" x:Name="PlayPauseButton" Tapped="PlayPauseButton_Click"/>
+            <AppBarButton Grid.Column="3" Icon="Next" x:Name="NextButton" Tapped="NextButton_Click" IsEnabled="False" />
+            <TextBlock Grid.Column="4" x:Name="StatusBox" Margin="40,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="14"/>
+            <ProgressBar Grid.Column="4" x:Name="FileDownloadProgBar" HorizontalAlignment="Left" Height="4" Width="200" Margin="40,40,0,0" VerticalAlignment="Top" Visibility="Collapsed"/>
+        </Grid>
+
         <!-- Image -->
-        <StackPanel Grid.Row="3" Margin="120,0,40,40">
-            <Grid xmlns:src="using:Rad" Height="490" Margin="0,0,40,40">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="725" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <ScrollViewer Grid.Column="0" x:Name="ImgScrollViewer" ZoomMode="Enabled" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" MinZoomFactor="1" MaxZoomFactor="3" Margin="0,0,0,0">
-                    <src:OverlaidImages x:Name="ImgBox" VerticalAlignment="Top" HorizontalAlignment="Left" Width="725" Height="468"/>
+        <Grid Grid.Row="3" xmlns:src="using:Rad">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+                <ScrollViewer Grid.Column="1" x:Name="ImgScrollViewer" ZoomMode="Enabled" VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden" MinZoomFactor="1" MaxZoomFactor="3" >
+                    <src:OverlaidImages x:Name="ImgBox" VerticalAlignment="Top" HorizontalAlignment="Left" />
                 </ScrollViewer>
-            </Grid>
-        </StackPanel>
+        </Grid>
     </Grid>
 </Page>
