--- a/Rad/Rad.Windows/OptionsPage.xaml
+++ b/Rad/Rad.Windows/OptionsPage.xaml
@@ -20,7 +20,7 @@
             <!-- Section 1 header -->
             <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Station" />
             <!-- Section 1 body -->
-            <ComboBox x:Name="ProvinceComboBox" Margin="0,17,0,0" Padding="10,0,27,0" Width="auto" SelectionChanged="ProvinceComboBox_SelectionChanged" SelectedIndex="0">
+            <ComboBox x:Name="ProvinceComboBox" Margin="0,12,0,0" Padding="10,0,27,0" Width="auto" SelectionChanged="ProvinceComboBox_SelectionChanged" SelectedIndex="0">
                 <x:String>Alberta</x:String>
                 <x:String>British Columbia</x:String>
                 <x:String>Manitoba</x:String>
@@ -30,7 +30,7 @@
                 <x:String>Quebec</x:String>
                 <x:String>Saskatchewan</x:String>
             </ComboBox>
-            <ComboBox x:Name="StationComboBox" Margin="0,17,0,0" Padding="10,0,27,0" Width="auto"/>
+            <ComboBox x:Name="StationComboBox" Margin="0,12,0,0" Padding="10,0,27,0" Width="auto"/>
         </StackPanel>
 
         <!-- Define more Content Sections below as necessary -->
@@ -38,7 +38,7 @@
             <!-- Section header -->
             <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Radar Product" />
             <!-- Section body -->
-            <Grid Margin="0,17,0,0">
+            <Grid Margin="0,,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*"/>
@@ -79,8 +79,8 @@
                 </Grid.RowDefinitions>
                 <CheckBox x:Name="CityCheckBox" Grid.Column="0" Grid.Row="0" Content="Cities" IsChecked="True"/>
                 <CheckBox x:Name="TownCheckBox" Grid.Column="1" Grid.Row="0" Content="More Cities" />
-                <CheckBox x:Name="RoadCheckBox" Grid.Column="0" Grid.Row="1" Content="Roads" IsChecked="True" />
-                <CheckBox x:Name="RoadNoCheckBox" Grid.Column="1" Grid.Row="1" Content="Road Numbers"  />
+                <CheckBox x:Name="RadarCircleCheckBox" Grid.Column="0" Grid.Row="1" Content="Radar Circles"  />
+                <CheckBox x:Name="RoadCheckBox" Grid.Column="1" Grid.Row="1" Content="Roads" IsChecked="True" />
             </Grid>
         </StackPanel>
 
