--- a/Rad/Rad.Windows/OptionsPage.xaml
+++ b/Rad/Rad.Windows/OptionsPage.xaml
@@ -31,44 +31,35 @@
                 <x:String>Saskatchewan</x:String>
             </ComboBox>
             <ComboBox x:Name="StationComboBox" Margin="0,12,0,0" Padding="10,0,27,0" Width="auto"/>
-        </StackPanel>
 
-        <!-- Define more Content Sections below as necessary -->
-        <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}">
             <!-- Section header -->
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Radar Product" />
+            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Radar Product" Margin="0,24,0,0"/>
             <!-- Section body -->
-            <Grid Margin="0,,0,0">
+            <Grid Margin="0,12,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <RadioButton x:Name="ProductRadioButton1" Grid.Column="0" Content="PRECIPET" IsChecked="True" GroupName="ProductBoxes" />
-                <RadioButton x:Name="ProductRadioButton2" Grid.Column="1" Content="CAPPI" GroupName="ProductBoxes"/>
-
+                <RadioButton x:Name="ProductRadioButton2" Grid.Column="0" Content="CAPPI" GroupName="ProductBoxes"/>                
+                <RadioButton x:Name="ProductRadioButton1" Grid.Column="1" Content="PRECIPET" IsChecked="True" GroupName="ProductBoxes" />
             </Grid>
-        </StackPanel>
 
-        <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}">
             <!-- Section header -->
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Precipitation Type" />
-        <!-- Section body -->
-        <Grid Margin="0,17,0,0">
+            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Precipitation Type" Margin="0,24,0,0"/>
+            <!-- Section body -->
+            <Grid Margin="0,12,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
                 <RadioButton x:Name="PrecipitationRadioButton1" Grid.Column="0" Content="Rain" IsChecked="True" GroupName="PrecipitationBoxes" />
                 <RadioButton x:Name="PrecipitationRadioButton2" Grid.Column="1" Content="Snow" GroupName="PrecipitationBoxes"/>
-
             </Grid>
-    </StackPanel>
 
-        <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}">
             <!-- Section header -->
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Overlays" />
+            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Overlays" Margin="0,24,0,0"/>
             <!-- Section body -->
-            <Grid Margin="0,17,0,0">
+            <Grid Margin="0,12,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*"/>
@@ -82,13 +73,11 @@
                 <CheckBox x:Name="RadarCircleCheckBox" Grid.Column="0" Grid.Row="1" Content="Radar Circles"  />
                 <CheckBox x:Name="RoadCheckBox" Grid.Column="1" Grid.Row="1" Content="Roads" IsChecked="True" />
             </Grid>
-        </StackPanel>
 
-        <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}">
             <!-- Section header -->
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Duration" />
+            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Duration" Margin="0,24,0,0"/>
             <!-- Section body -->
-            <Grid Margin="0,17,0,0">
+            <Grid Margin="0,12,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*"/>
@@ -96,13 +85,11 @@
                 <RadioButton x:Name="DurationRadioButton1" Grid.Column="0" Content="1 hr" IsChecked="True" GroupName="DurationBoxes" />
                 <RadioButton x:Name="DurationRadioButton2" Grid.Column="1" Content="3 hr" GroupName="DurationBoxes"/>
             </Grid>
-        </StackPanel>
-        
-        <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}">
+
             <!-- Section header -->
-            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Loop Speed (time per image)" />
+            <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Loop Speed (time per image)" Margin="0,24,0,0"/>
             <!-- Section body -->
-            <Grid Margin="0,17,0,0">
+            <Grid Margin="0,12,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
