--- a/Rad/Rad.WindowsPhone/OptionsPage.xaml
+++ b/Rad/Rad.WindowsPhone/OptionsPage.xaml
@@ -28,11 +28,11 @@
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
-        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Hidden" Padding="0,0,0,0" Margin="0,0,0,0" Grid.Row="1">
+        <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Hidden" Grid.Row="1">
             <StackPanel Grid.Row="1" Margin="19,9.5,19,0">
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Station" />
-                <ComboBox x:Name="ProvinceComboBox" Margin="0,0,0,0" Padding="0,0,27,0" Width="auto" SelectionChanged="ProvinceComboBox_SelectionChanged" SelectedIndex="0">
+                <ComboBox x:Name="ProvinceComboBox" Padding="0,0,27,0" Width="auto" SelectionChanged="ProvinceComboBox_SelectionChanged" SelectedIndex="0">
                     <x:String>Alberta</x:String>
                     <x:String>British Columbia</x:String>
                     <x:String>Manitoba</x:String>
@@ -45,7 +45,7 @@
                 <ComboBox x:Name="StationComboBox" />
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Radar Product" Margin="0,12,0,0"/>
-                <Grid Margin="0,0,0,0">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*"/>
@@ -55,7 +55,7 @@
                 </Grid>
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Precipitation Type" Margin="0,12,0,0"/>
-                <Grid Margin="0,0,0,0">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*"/>
@@ -66,7 +66,7 @@
                 </Grid>
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Overlays" Margin="0,12,0,0"/>
-                <Grid Margin="0,0,0,0">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*"/>
@@ -82,7 +82,7 @@
                 </Grid>
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Duration" Margin="0,12,0,0"/>
-                <Grid Margin="0,0,0,0">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition />
@@ -92,7 +92,7 @@
                 </Grid>
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Loop Speed (time per image)" Margin="0,12,0,0"/>
-                <Grid Margin="0,0,0,0">
+                <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
