--- a/Rad/Rad.WindowsPhone/OptionsPage.xaml
+++ b/Rad/Rad.WindowsPhone/OptionsPage.xaml
@@ -33,6 +33,7 @@
 
                 <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Station" />
                 <ComboBox x:Name="ProvinceComboBox" Padding="0,0,27,0" Width="auto" SelectionChanged="ProvinceComboBox_SelectionChanged" SelectedIndex="0">
+                    <x:String>Composites</x:String>
                     <x:String>Alberta</x:String>
                     <x:String>British Columbia</x:String>
                     <x:String>Manitoba</x:String>
