--- a/Rad/Rad.WindowsPhone/OptionsPage.xaml
+++ b/Rad/Rad.WindowsPhone/OptionsPage.xaml
@@ -63,7 +63,7 @@
                     <RadioButton x:Name="ProductRadioButton1" Grid.Column="1" Content="PRECIPET" GroupName="ProductBoxes" />
                 </Grid>
 
-                <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Precipitation Type" Margin="0,24,0,0"/>
+                <TextBlock x:Name="PrecipitationTypeTextBox" Style="{StaticResource TitleTextBlockStyle}" Text="Precipitation Type" Margin="0,24,0,0"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
@@ -74,7 +74,7 @@
 
                 </Grid>
 
-                <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Overlays" Margin="0,24,0,0"/>
+                <TextBlock x:Name="OverlaysTextBox" Style="{StaticResource TitleTextBlockStyle}" Text="Overlays" Margin="0,24,0,0"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
